# hoppy

example/example/: hoppy-example.cabal
example/example-cpp/: Setup.hs  hoppy-example-cpp.cabal
example/simple/: clean.sh  install.sh
example/simple/example/: Setup.hs
runtime/src/Foreign/Hoppy/: Setup.hs
