name: hoppy-example-cpp
version: 0.1.0
license: Apache-2.0
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2018 Bryan Gardiner
build-type: Custom
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
      Foreign.Hoppy.Example.Internal.EmptyCpp
  build-depends:
      base
    , hoppy-example-generator
    , hoppy-runtime
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  -- Use c-sources instead of cxx-sources as a workaround until Cabal-2.2.0 become widely used.
  c-sources:
    cpp/utils.cpp
    cpp/utils.hpp
  include-dirs: cpp
  if os(darwin)
    extra-libraries: c++
  else
    extra-libraries: stdc++
